# sizablegraphicsitem

./: CMakeLists.txt  README.md  SizableGraphicsItem.cpp  SizableGraphicsItem.h
demo/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
